Bug 414982 - Settings window should not be a KCM
Summary: Settings window should not be a KCM
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.03.70
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-09 16:21 UTC by Nate Graham
Modified: 2020-02-14 16:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.12.1
Sentry Crash Report:


Attachments
Elisa KCM (26.73 KB, image/png)
2019-12-09 16:21 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2019-12-09 16:21:27 UTC
Created attachment 124399 [details]
Elisa KCM

Since the settings window is implemented as a KCM, it shows up in KRunner as though it were a standalone system settings KCM. But it is not, so it should not show up there, which means it should not be implemented as a KCM.
Comment 1 Matthieu Gallien 2019-12-11 16:46:31 UTC
I will have a look at it. Especially, I would like to see how application like kate and okular are doing.
Comment 2 Matthieu Gallien 2019-12-11 17:07:51 UTC
I will work on a merge request that will cover also the new settings already created in the not yet merged merge requests.
Comment 3 Matthieu Gallien 2019-12-22 18:52:50 UTC
Git commit 1e328cd90eee05157a860d8beeb14fba344c54b6 by Matthieu Gallien.
Committed on 22/12/2019 at 17:15.
Pushed by mgallien into branch 'release/19.12'.

convert KCM based configuration dialog to a simple dialog

M  +4    -5    src/CMakeLists.txt
M  +13   -6    src/elisaapplication.cpp
M  +5    -0    src/elisaapplication.h
M  +2    -0    src/elisaqmlplugin.cpp
D  +0    -43   src/localFileConfiguration/CMakeLists.txt
D  +0    -3    src/localFileConfiguration/Messages.sh
R  +16   -44   src/localFileConfiguration/elisaconfigurationdialog.cpp [from: src/localFileConfiguration/localfileconfiguration.cpp - 058% similarity]
R  +9    -12   src/localFileConfiguration/elisaconfigurationdialog.h [from: src/localFileConfiguration/localfileconfiguration.h - 076% similarity]
D  +0    -104  src/localFileConfiguration/kcm_elisa_local_file.desktop
D  +0    -78   src/localFileConfiguration/package/metadata.desktop
M  +5    -0    src/main.cpp
R  +29   -20   src/qml/ElisaConfigurationDialog.qml [from: src/localFileConfiguration/package/contents/ui/main.qml - 079% similarity]
M  +1    -0    src/resources.qrc

https://invent.kde.org/kde/elisa/commit/1e328cd90eee05157a860d8beeb14fba344c54b6
Comment 4 Matthieu Gallien 2020-02-14 16:23:15 UTC
Git commit f80296402f3df7a08ed03e86a6a3ad494fc54303 by Matthieu Gallien.
Committed on 14/02/2020 at 06:23.
Pushed by mgallien into branch 'master'.

convert KCM based configuration dialog to a simple dialog

M  +2    -1    src/qml/ElisaConfigurationDialog.qml

https://invent.kde.org/kde/elisa/commit/f80296402f3df7a08ed03e86a6a3ad494fc54303