convert KCM based configuration dialog to a simple dialog

BUG: 414982